--- a/06_inicioCSS.html
+++ b/06_inicioCSS.html
@@ -19,6 +19,19 @@
             font-variant: small-caps;
             color: red;
             background-color: #00fff0;
+            margin-left: 50px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            padding-left: 25px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+            padding-right: 50px;
+        }
+
+        h2{
+            border-color: #03bc15;
+            border-style: double;
+            border-width: 20px;
         }
 
         p{
@@ -27,6 +40,7 @@
             text-decoration: line-through;
             text-indent: 20px;
             text-transform: uppercase;
+            margin-bottom: 50px;
         }
     </style>
 </head>
