--- a/08_curriculo.html
+++ b/08_curriculo.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Nomenclatura</title>
+        <title>CV</title>
         <meta charset="utf-8">
         <meta name="author" content="Renato">
         <meta name="description" content="Testes">
@@ -10,13 +10,104 @@
 
         <style>
             h1{
-                background: #c27d05;
-                width: 250px;
-                margin: 30px auto;
+                background-color: #ffe4c4;
+                color: #a52a2a;
+                text-align: center;
+                padding: 50%;
+            }
+
+            h2{
+                background-color: #e20707;
+                color: #5c120a;
+                padding-inline-end: ;
+            }
+
+            b{
+                color: #233dc0;
             }
         </style>
     </head>
     <body>
+        <h1>Renato Borges</h1>
 
+            <p>Brasileiro, solteiro, 30 anos.</p>
+
+        <h2>Objetivo</h2>
+
+            <ol>
+                <li>Front Developer</li>
+                <li>AWS Certified Cloud Practitioner</li>
+            </ol>
+
+        <h2>Experiência profissional</h2>
+
+            <h3><b>Tecnologias Ltda</b> - 01/2022 até 12/2022 - 12 meses</h3>
+
+            <h4>Analista de Infraestrutura Pl</h4>
+
+            <p>
+                Responsáveis por organizar e supervisionar o ciclo de vida dos recursos de TI, 
+                inspecionar o parque tecnológico, prestar suporte e manutenção de sistemas, diagnosticar e solucionar.
+            </p>
+
+
+            <h3><b>WiFi SA</b> - 01/2021 até 12/2021 - 12 meses</h3>
+
+            <h4>Analista de Infraestrutura Jr</h4>
+
+            <p>
+                Prestar suporte e manutenção de sistemas, diagnosticar e solucionar.
+            </p>
+
+
+            <h3><b>Computadores & Cia</b> - 01/2020 até 12/2020 - 12 meses</h3>
+
+            <h4>Auxiliar de TI</h4>
+
+            <p>
+                Prestar suporte e manutenção de computadores.
+            </p>
+
+        <h2>Formação</h2>
+
+        <h3><b>Análise e Desenvolvimento de Sistemas</b></h3>
+
+        <p>
+            01/2018 até 12/2020
+
+            Faculdade de Tecnologia Mundial
+        </p>
+
+
+        <h3><b>Tecnologia da Informação</b></h3>
+
+        <p>
+            01/2017 até 12/2021
+
+            Instituição Tecno Cursos
+        </p>
+
+        <h2>Cursos / Especializações</h2>
+
+        <ol>
+            <li>Participação na Assembléia de Tecnologia - São Paulo (2019)</li>
+            <li>Certificação em Tecnologias de Boston</li>
+        </ol>
+
+        <h2>HTML5</h2>
+
+        <p>serfrontend - 40H - 2018</p>
+
+        <h2>Javascript</h2>
+
+        <p>serfrontend - 40H - 2018</p>
+
+        <h2>CSS3</h2>
+
+        <p>serfrontend - 40H - 2018</p>
+
+        <h2>Idioma</h2>
+
+        <p>Inglês: básico</p>
     </body>
 </html>
