--- a/08_curriculo.html
+++ b/08_curriculo.html
@@ -9,17 +9,23 @@
         <meta name="keywords" content="links">
 
         <style>
+            body{
+                padding: 25px;
+                font-family: sans-serif;
+            }
+
             h1{
                 background-color: #ffe4c4;
                 color: #a52a2a;
                 text-align: center;
-                padding: 50%;
+                padding: 5px;
             }
 
             h2{
-                background-color: #e20707;
-                color: #5c120a;
-                padding-inline-end: ;
+                background-color: #df7e7ef0;
+                color: #ff0000;
+                padding: 5px;
+                padding-inline-start: 20px;
             }
 
             b{
@@ -30,7 +36,7 @@
     <body>
         <h1>Renato Borges</h1>
 
-            <p>Brasileiro, solteiro, 30 anos.</p>
+        <p>Brasileiro, solteiro, 30 anos.</p>
 
         <h2>Objetivo</h2>
 
@@ -41,7 +47,9 @@
 
         <h2>Experiência profissional</h2>
 
-            <h3><b>Tecnologias Ltda</b> - 01/2022 até 12/2022 - 12 meses</h3>
+        <h3>
+            <b>Tecnologias Ltda</b> - 01/2022 até 12/2022 - 12 meses
+        </h3>
 
             <h4>Analista de Infraestrutura Pl</h4>
 
@@ -94,19 +102,19 @@
             <li>Certificação em Tecnologias de Boston</li>
         </ol>
 
-        <h2>HTML5</h2>
+        <h4>HTML5</h4>
 
         <p>serfrontend - 40H - 2018</p>
 
-        <h2>Javascript</h2>
+        <h4>Javascript</h4>
 
         <p>serfrontend - 40H - 2018</p>
 
-        <h2>CSS3</h2>
+        <h4>CSS3</h4>
 
         <p>serfrontend - 40H - 2018</p>
 
-        <h2>Idioma</h2>
+        <h4>Idioma</h4>
 
         <p>Inglês: básico</p>
     </body>
