--- a/08_curriculo.html
+++ b/08_curriculo.html
@@ -31,10 +31,41 @@
             b{
                 color: #233dc0;
             }
+
+            .menu {
+                background-color: rgb(70, 20, 194);
+                text-align: center;
+            }
+
+            .menu li{
+                list-style-type: none;
+                background-color: #ff0000;
+                margin: 10px;
+                display: inline-block;
+                padding: 16px;
+            }
+
+            .menu a{
+                background-color: #654;
+                padding: 16px;
+                display: block;
+            }
+
+            .menu a:hover{
+                background-color: #333;
+                color: #fff;
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
         <h1>Renato Borges</h1>
+
+        <ul class="menu">
+            <li><a href="www.google.com">Github</a></li>
+            <li><a href="www.linkdin.com">Linkdin</a></li>
+            <li><a href="www.google.com">Google</a></li>
+        </ul>
 
         <p>Brasileiro, solteiro, 30 anos.</p>
 
